--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'netrunner';
-  src:  url('fonts/netrunner.eot?hz9eam');
-  src:  url('fonts/netrunner.eot?hz9eam#iefix') format('embedded-opentype'),
-    url('fonts/netrunner.ttf?hz9eam') format('truetype'),
-    url('fonts/netrunner.woff?hz9eam') format('woff'),
-    url('fonts/netrunner.svg?hz9eam#netrunner') format('svg');
+  src:  url('fonts/netrunner.eot?cmdd12');
+  src:  url('fonts/netrunner.eot?cmdd12#iefix') format('embedded-opentype'),
+    url('fonts/netrunner.ttf?cmdd12') format('truetype'),
+    url('fonts/netrunner.woff?cmdd12') format('woff'),
+    url('fonts/netrunner.svg?cmdd12#netrunner') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -95,6 +95,12 @@
 }
 .icon-flashpoint:before {
   content: "\e921";
+}
+.icon-red-sand:before {
+  content: "\e922";
+}
+.icon-terminal-directive:before {
+  content: "\e923";
 }
 .icon-anarch:before {
   content: "\e91a";
