--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'netrunner';
-  src:  url('fonts/netrunner.eot?cmdd12');
-  src:  url('fonts/netrunner.eot?cmdd12#iefix') format('embedded-opentype'),
-    url('fonts/netrunner.ttf?cmdd12') format('truetype'),
-    url('fonts/netrunner.woff?cmdd12') format('woff'),
-    url('fonts/netrunner.svg?cmdd12#netrunner') format('svg');
+  src:  url('fonts/netrunner.eot?f50xwu');
+  src:  url('fonts/netrunner.eot?f50xwu#iefix') format('embedded-opentype'),
+    url('fonts/netrunner.ttf?f50xwu') format('truetype'),
+    url('fonts/netrunner.woff?f50xwu') format('woff'),
+    url('fonts/netrunner.svg?f50xwu#netrunner') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -102,6 +102,15 @@
 .icon-terminal-directive:before {
   content: "\e923";
 }
+.icon-core2:before {
+  content: "\e924";
+}
+.icon-kitara:before {
+  content: "\e925";
+}
+.icon-reign-and-reverie:before {
+  content: "\e926";
+}
 .icon-anarch:before {
   content: "\e91a";
 }
@@ -132,4 +141,3 @@
 .icon-sunny-lebeau:before {
   content: "\e91c";
 }
-
